<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL" Id="{7ea246ce-2a6d-4b87-aac6-827fdf3c548d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Start : BOOL;
	Stopp : BOOL := FALSE;
	NotStopp : BOOL := TRUE;
	Fehler			: BOOL;
	Weiter			: BOOL;
	DiagnoseRequested: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>