<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_Diagnose_D2" Id="{ed85d8c7-5c77-483c-af2a-609bd70983a9}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC FB_Diagnose_D2
VAR_INPUT
    Diagnose_gefordert         : BOOL;  // z. B. D2 aus FB_Betriebsarten
END_VAR
VAR_OUTPUT
    Diagnose_beendet           : BOOL;  // geht zurück an FB_Betriebsarten
	Alt_gefunden			   : BOOL := FALSE;
END_VAR
VAR
    // Steuerung/Handshake intern
    Busy       : BOOL;

    // Flanken + Puls
    rtReq      : R_TRIG;    // steigende Flanke auf Diagnose_gefordert
	rtD3 : R_TRIG;
    tpPulse    : TP;        // kurzer Puls für OPCUA.TriggerD2 (z. B. 100 ms)
    rtFinished : R_TRIG;    // steigende Flanke auf OPCUA.DiagnoseFinished
	 rtAck : R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// 1) Startflanke erkennen
rtReq(CLK := Diagnose_gefordert);

// 2) Einmalig triggern (nur wenn noch nicht "Busy"):
IF rtReq.Q AND NOT Busy THEN
    Busy := TRUE;
	Alt_gefunden := FALSE;
	OPCUA.TriggerD2 := TRUE; 
	OPCUA.bool1 := TRUE;
END_IF

  // {attribute 'OPC.UA.DA' := '1'} in der GVL setzen

// 3) Fertigmeldung vom OPC-UA-Client
//rtFinished(CLK := OPCUA.DiagnoseFinished);
rtAck(CLK := OPCUA.DiagnoseFinished);
rtD3(CLK := OPCUA.Alt_found);
IF rtAck.Q OR rtD3.Q THEN
    Diagnose_beendet := TRUE;
    GVL.Weiter := TRUE;
    Busy := FALSE;
    OPCUA.TriggerD2 := FALSE;
	OPCUA.bool2 := FALSE;
    GVL.Fehler := FALSE;
    Diagnose_gefordert := FALSE;
	GVL.DiagnoseRequested := FALSE;
END_IF
IF rtD3.Q THEN
	Alt_gefunden := TRUE;
END_IF]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>